sass/_transaksi.sass
.transaction-page
  .box
    .media
      &.list-item
        position: relative
  .payment-detail
    .box
      &.notif-payment
        background-color: $notif_payment
        +borderRadius(3px)
        margin-top: 15px

.box
  .media
    .media-left
      .image
        overflow: hidden
        &.xs
          +size(30px, 30px)
        &.sm
          +size(35px, 35px)
        &.lg
          +size(60px, 60px)
        &.lgx
          +size(72px, 72px)
        &.list-transaction
          +size(45px, 45px)
          +borderRadius(3px)
          position: relative
          overflow: hidden
          &.xs
            +size(30px, 30px)
          &.sm
            +size(35px, 35px)
          &.lg
            +size(60px, 60px)
          &.lgx
            +size(72px, 72px)
          img
            +borderRadius(3px)
          &.plus3
            &:after
              content: ""
              position: absolute
              top: 0
              left: 0
              +size(100%, 100%)
              background-color: $overlay
              z-index: 1
            &>span
              color: $white
              position: absolute
              top: 50%
              left: 50%
              +translateXY(-50%, -50%)
              z-index: 2
              @extend .nunito-semibold
      &.is-full-bordered
        .image
          &.list-transaction
            img
              +borderRadius(700px)
.price-items
  display: inline-block
  vertical-align: top
  p
    font-size: 12px
    letter-spacing: 0.2px
    color: $color_text_desc
    opacity: 0.5

.confirm-transaction
  p
    padding-top: 40px
    margin-bottom: 40px

  .list-inline
    li
      margin-right: 20px
      padding-bottom: 80px
      position: relative
      &:last-child
        margin-right: 0
      .confirm-btn
        +size(113px, 113px)
        +borderRadius(100%)
        background-color: $white
        box-shadow: $shadow_confirm
        position: relative
        > div
          position: absolute
          top: 50%
          left: 50%
          +translateXY(-50%, -50%)
          span
            display: block
            font-size: 15px
            @extend .nunito-bold
            letter-spacing: 0.2px
            margin-bottom: 10px
            &:last-child
              margin-bottom: 0
        &.confirm-no
          color: $red
        &.confirm-yes
          color: $green

      &.active
        &:after
          content: ""
          position: absolute
          left: 50%
          bottom: 0
          +translateX(-50%)
          +size(0px, 0px)
          border: 20px solid transparent
          border-bottom: 20px solid $white
        .confirm-btn
          &.confirm-no
            color: $white
            background-color: $red
            .icon-tidak
              background-image: url($icon-tidak-white)
          &.confirm-yes
            color: $white
            background-color: $green
            .icon-ya
              background-image: url($icon-ya-white)

.edit-data-delivery
  .box
    margin-bottom: 0
  .add-discussion
    padding: 0
    .radio
      @extend .nunito-bold
  .detail-rating
    box-shadow: none
  .columns
    &.detail-rating
      .column
        padding: 0
        .rating-content
          position: relative
          padding-bottom: 20px
          border-bottom: 0.5px solid $color_border
          .star-rating
            +size(121px, 24px)
          .review-result
            color: $green
            letter-spacing: 0.2px
            position: absolute
            right: 0
            bottom: 20px
  .filter-option
    .sort-list
      &.middle
        .checkbox
          padding-top: 10px
          padding-bottom: 10px
    &.issue
      .sort-list
        &.middle
          .checkbox
            padding-top: 0
            padding-bottom: 0
.list-trans-product
  li
    border-bottom: 0.5px solid $color_border
    .media
      padding: 20px
      .media-content
        h4
          @extend .nunito-bold
        strong
          display: block
        span
          font-size: 12px
          font-style: italic
    &:last-child
      border-bottom: none
  .columns
    &.custom
      .column
        position: relative
.info-purchase
  &.space-left
    padding: 0
    border-bottom: none
    .box
      padding: 20px 40px 20px 0
      margin-left: 20px
      margin-right: -20px
      border-bottom: 0.5px solid $color_border
    .detail-rate
      padding: 20px 40px 20px 0
      margin-left: 20px
      margin-right: -20px
      border-bottom: 0.5px solid $color_border
    &:last-child
      .detail-rate, .box
        border-bottom: none
.mark
  padding: 20px
  border-bottom: 0.5px solid $color_border
  background-color: $white
  p
    margin-bottom: 0
    font-size: 13px
    line-height: 1.77
    letter-spacing: 0.5px
.customer-order
  border-bottom: 0.5px solid $color_border
  background-color: $white
  li
    &.label-order
      padding-top: 10px
    .columns
      &.custom
        .column
          padding: 10px 20px;
          border: none
          span
            font-size: 12px
            letter-spacing: 0.2px
            color: $color_seller_grey
            &.notif-akun
              color: $white
.seller-items
  position: absolute
  top: 50%
  right: 20px
  +translateY(-50%)
  li
    display: inline-block
    vertical-align: top
    border: none
    margin-bottom: 0
    a
      +size(30px, 30px)
      +borderRadius(3px)
      display: inline-block
      overflow: hidden
      vertical-align: middle
      &.is-bordered
         +borderRadius(700px)
      &.inline-text
        margin-right: 10px

+until(767px)
  .box
    .media
      &.list-item
        display: block
        .media-left
          display: inline-block

